Removed translate and fixed whitespacing/syntax

--- a/pepsico-app/src/frontend/styles/styles.css
+++ b/pepsico-app/src/frontend/styles/styles.css
@@ -57,7 +57,6 @@ body {
 }
 
 .container1 {
-  transform: translate(0%, 15%);
   justify-content: center;
   display: grid;
   grid-template-columns: 7rem 7rem 7rem 7rem 7rem;
